[package]
name = "elis-lib"
version = "0.1.0"
authors = ["jonlamb-gh <lamb.jon.io@gmail.com>"]

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
dimensioned = { version = "0.7.0", features = ["std", "serde"] }
rustbreak = { version = "2.0.0-rc3", features = ["bin_enc"] }
steel-cent = "0.2.2"
serde = "1.0.0"
serde_derive = "1.0.0"
nom = "4.0.0"
